--- a/index.html
+++ b/index.html
@@ -149,10 +149,12 @@
 
         <main role="main" class="inner cover">
             <h1 class="cover-heading">Jack Greenberg</h1>
+            <br>
             <p class="lead">
-                Hi! I'm a Computer Science student interested in building cool things and exploring cool technology.
-                Check out some of the cool things I've done at the links below:
+                Hi! I'm Jack, a Computer Science student interested in building cool things and exploring cool technology.
+                Check out some of the cool things I've worked on at the links below:
             </p>
+            <br>
             <p class="lead">
                 <ul class="list-inline mb-0">
                     <li class="list-inline-item">
