--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
             <h1 class="cover-heading">Jack Greenberg</h1>
             <br>
             <p class="lead">
-                Hi! I'm Jack, a Computer Science student interested in building cool things and exploring cool technology.
-                Check out some of the cool things I've worked on at the links below:
+                Hi! I'm Jack, a Computer Science student interested in building cool things and exploring new technology.
+                Check out some of the things I've worked on at the links below:
             </p>
             <!-- <br> -->
             <p class="lead">
