--- a/index.html
+++ b/index.html
@@ -17,6 +17,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
+
+    <style>
+        div .social-link {
+            display: block;
+            height: 4rem;
+            width: 4rem;
+            line-height: 4.3rem;
+            font-size: 1.5rem;
+            background-color: #1d809f;
+            transition: background-color .15s ease-in-out;
+            box-shadow: 0 3px 3px 0 rgba(0,0,0,.1);
+        }
+
+        div .social-link:hover {
+            background-color: #155d74;
+            text-decoration: none;
+        }
+    </style>
 </head>
 
 <body id="page-top"><a class="menu-toggle rounded" href="#"><i class="fa fa-bars"></i></a>
@@ -37,7 +55,16 @@
     <header class="d-flex masthead" style="background-image: url('assets/img/aperture-vintage-unsplash.jpg');">
         <div class="container my-auto text-center">
             <h1 class="mb-1">Jack Greenberg</h1>
-            <h3 class="mb-5"><em>Software Developer and Aspiring Writer</em></h3><a class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="#about">Find Out More</a>
+            <h3 class="mb-5"><em>Software Developer and Aspiring Writer</em></h3>
+            
+            <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="#about">Find Out More</a>
+
+            <div class="text-center">
+                <ul class="list-inline mb-5">
+                    <li class="list-inline-item">&nbsp;<a class="text-white social-link rounded-circle" href="https://www.linkedin.com/in/jack-greenberg-913bb1196/"><i class="icon-social-linkedin"></i></a></li>
+                    <li class="list-inline-item">&nbsp;<a class="text-white social-link rounded-circle" href="https://github.com/grebneerg"><i class="icon-social-github"></i></a></li>
+                </ul>
+            </div>
             <div class="overlay"></div>
         </div>
     </header>
