--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Jack Greenberg</title>
-    <link rel="icon" type="image/png" sizes="500x500" href="assets/img/Jack.png">
-    <link rel="icon" type="image/png" sizes="500x500" href="assets/img/Jack.png">
-    <link rel="icon" type="image/png" sizes="500x500" href="assets/img/Jack.png">
-    <link rel="icon" type="image/png" sizes="500x500" href="assets/img/Jack.png">
-    <link rel="icon" type="image/png" sizes="500x500" href="assets/img/Jack.png">
+    <link rel="icon" type="image/png" sizes="500x500" href="assets/img/headcircle.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
